--- a/app/assets/templates/photos/photo_index_item.jst.ejs
+++ b/app/assets/templates/photos/photo_index_item.jst.ejs
@@ -1,2 +1,9 @@
 <img src="<%= photo.get('url') %>">
-<button class="btn btn-danger btn-xs">delete!</button>
+<span class="badge"><%= photo.get('likes_count') %></span>
+
+<button class="btn btn-danger btn-xs destroy">delete!</button>
+<% if(photo.liked()) { %>
+  <button class="btn btn-success btn-xs like">like!</button>
+<% } else { %>
+  <button class="btn btn-warning btn-xs unlike">unlike!</button>
+<% } %>
