--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,10 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+
+  <% if !!current_user %>
+    <script>window.CURRENT_USER_ID = <%= current_user.id %>;</script>
+  <% end %>
 </head>
 <body>
 
